crates/fastab_integrations/src/shell/snapshots/fastab_integrations__shell__test__zsh_pre_zshrc.pre.zsh.snap
---
source: crates/fastab_integrations/src/shell/mod.rs
expression: integration.get_contents()
---
_Q_LOCAL_BIN="$HOME/.local/bin"
[[ ":$PATH:" != *":$_Q_LOCAL_BIN:"* ]] && PATH="${PATH:+"$PATH:"}$_Q_LOCAL_BIN"
unset _Q_LOCAL_BIN

command -v q >/dev/null 2>&1 && eval "$(q init zsh pre --rcfile zshrc)"
